# SDL2-Game

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Game.hpp  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  Window.cpp  main.cpp
include/: ECS.h  Game.h  GameObject.h  Map.h  PositionComponent.h  Renderer.h  SpriteComponent.h  TextureManager.h  Window.h
src/: Game.cpp  GameObject.cpp  Map.cpp  Renderer.cpp  SpriteComponent.cpp  TextureManager.cpp  Window.cpp  main.cpp
